@@ -23,6 +23,7 @@ debian-installer (20040721) UNRELEASED; urgency=low
       Closes: #250027 ; Same for hppa. Closes: #250026
     - Integrate installation howto into manual. The old text format howto is
       left for now until we update all links and docs to point to the new one.
+    - Full package builds build the manual in official build mode.
   * Stephen R. Marenka
     - Kill second set of m68k initrds, genext2fs seems to work.
     - Add /dev/null to userdevfs-dev.txt.
